--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   shimmer: ^3.0.0
   flutter_svg: ^2.0.7
   ionicons: ^0.2.2
+  selector_wheel: ^1.1.2
 
 dev_dependencies:
   flutter_test:
